turtleart.housetree.HouseTree.scala.error
Erreur de compilation :
HouseTree:3: error: '<-' expected but ')' found.
  for(i<1 to 4){
              ^HouseTree:6: error: illegal start of simple expression
}
^